# syscallz-rs

./: .travis.yml  Cargo.toml  README.md  build.rs  gen.py
.github/workflows/: cross.yml  rust.yml
ci/: build.sh  install.sh
src/: error.rs  lib.rs  rule.rs  syscalls.rs
src/b32/: arm.rs  mips.rs  powerpc.rs  sparc.rs  x86.rs
src/b64/: loongarch64.rs  mips64.rs  powerpc64.rs  riscv64.rs  s390x.rs  sparc64.rs  x86_64.rs
