[package]
name = "syscallz"
version = "0.11.2"
description = "Simple seccomp library for rust"
authors = ["kpcyrd <git@rxv.cc>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/kpcyrd/syscallz-rs"
keywords = ["seccomp", "sandbox"]
readme = "README.md"

[badges]
travis-ci = { repository = "kpcyrd/syscallz-rs" }

[dependencies]
seccomp-sys = "0.1.2"
libc = "0.2"
log = "0.4"
strum = "0.15"
strum_macros = "0.15"
