[package]
name = "syscallz"
version = "0.13.1"
description = "Simple seccomp library for rust"
authors = ["kpcyrd <git@rxv.cc>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/kpcyrd/syscallz-rs"
keywords = ["seccomp", "sandbox"]
readme = "README.md"
edition = "2018"

[badges]
travis-ci = { repository = "kpcyrd/syscallz-rs" }

[dependencies]
seccomp-sys = "0.1.3"
libc = "0.2.68"
log = "0.4"
strum = "0.18.0"
strum_macros = "0.18.0"

[build-dependencies]
pkg-config = "0.3"
